@@ -1,6 +1,13 @@
 devel
 -----
 
+* disallow the usage of volatile collections in the RocksDB engine 
+  by throwing an error when a collection is created with attribute 
+  `isVolatile` set to `true`. 
+  Volatile collections are unsupported by the RocksDB engine, so 
+  creating them should not succeed and silently create a non-volatile
+  collection 
+
 * prevent V8 from issuing SIGILL instructions when it runs out of memory
 
 * Foxx queues and tasks now ensure that the scripts in them, run on same permissions as the Foxx code who started the task / queue 
